# S10M0213

./: .chat_id  .gitignore  How To Use.md  README.md  agent.py  cli.py  configuration.py  connectors.py  gmail_auth.py  local_session.py  local_tools.py  main.py  memory_and_context.py  pyproject.toml  session_store.py  settings.example.json  swiggy_auth.py  telegram_commands.py  tool_manager.py  usage_tracker.py
.github/workflows/: Build And Publish.yml  PR Checks.yml  Run Tests.yml
Agent/: agent.py  connectors.py  main.py  memory_and_context.py  telegram_commands.py
Auth/: github_auth.py  gmail_auth.py  swiggy_auth.py  tavily_auth.py  telegram_auth.py
Cowork/: cowork_rag.py  cowork_session.py  cowork_tool_fileops.py  cowork_tools.py  local_session.py  local_tools.py
Navigator/: README.md  navigator_bridge.py  navigator_graph.py  requirements.txt
Navigator/Task_Files/: ChatStore.py  Chat_Section.py  Collections.py  Edit_Selection.py  Find_More_Like_This.py  Organise_Tabs.py  Organise_Tools.py  Reading_List_Groups.py  Summarise_Page.py
Navigator/extension/: background.js  content_script.js  manifest.json  popup.html  popup.js  side_panel.html
Navigator/extension/css/: base.css  chat.css  overlays.css
Navigator/extension/js/: api.js  features.js  main.js  mentions.js  notifications.js  ui.js
RECURRING_TASKS/: recurring_tasks.py  recurring_tasks.yaml
Recurring_Tasks/: recurring_tasks.py
SOULS/: main_llm.md  safety_llm.md
SOULS_tmp/: safety_llm.md
Souls/: eval_llm.md
Tests/: conftest.py  test.py  test_connectors.py  test_keys.py  test_memory_and_context.py  test_security.py  test_settings.py  test_souls.py  test_telegram_commands.py  test_tool_manager.py
