[project]
name = "s10m0213"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.136.1",
    "google-auth>=2.53.0",
    "google-auth-oauthlib>=1.4.0",
    "google-generativeai>=0.8.6",
    "langchain>=1.3.0",
    "langchain-anthropic>=1.4.3",
    "langchain-core>=1.4.0",
    "langchain-google-genai>=4.2.2",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=1.2.1",
    "langgraph>=1.2.0",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "langsmith>=0.8.3",
    "numpy>=2.4.6",
    "openai>=2.36.0",
    "python-dotenv>=1.2.2",
    "python-telegram-bot>=22.7",
    "pyyaml>=6.0.3",
    "requests>=2.34.0",
    "tiktoken>=0.13.0",
    "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
