[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sicily"
version = "2.5.8"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "chromadb>=1.5.9",
    "cryptography>=48.0.1",
    "fastapi>=0.136.1",
    "google-auth>=2.53.0",
    "google-auth-oauthlib>=1.4.0",
    "langchain>=1.3.0",
    "langchain-anthropic>=1.4.3",
    "langchain-chroma>=1.1.0",
    "langchain-core>=1.4.0",
    "langchain-google-genai>=4.2.2",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=1.2.1",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.0",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "langsmith>=0.8.3",
    "numpy>=2.4.6",
    "openai>=2.36.0",
    "openpyxl>=3.1.5",
    "pdfplumber>=0.11.10",
    "pyjwt>=2.13.0",
    "pypdf>=6.14.2",
    "pytest>=9.0.3",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.30",
    "python-telegram-bot>=22.7",
    "pyyaml>=6.0.3",
    "requests>=2.34.0",
    "rich>=15.0.0",
    "scikit-learn>=1.9.0",
    "starlette>=1.1.0",
    "structlog>=26.1.0",
    "tiktoken>=0.13.0",
    "uvicorn>=0.46.0",
]

[project.scripts]
sicily = "cli:main_cli"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.hatch.build.targets.sdist]
include = [
    "*.py",
    "Auth/**",
    "Context/**",
    "Recurring_Tasks/**",
    "Souls/**",
    "settings.example.json",
    "pyproject.toml",
    "README.md",
]
[tool.hatch.build.targets.wheel]
include = [
    "*.py",
    "Auth/**",
    "Context/**",
    "Recurring_Tasks/**",
    "Souls/**",
    "settings.example.json",
]
